# ImageAnnotationYolo

./: .gitignore  CMakeLists.txt  ImageAnnotationYolo.sln  README.md
ImageAnnotationYolo/: ImageAnnotationYolo.vcxproj  ImageAnnotationYolo.vcxproj.filters  Main.cpp  MainApp.cpp  MainApp.h  MainWindow.cpp
core/: IANNErrors.h
src/: AnnonateAutoUI.cpp  AnnonateAutoUI.h  App.cpp  App.h  ImageAnnotationYolo.cpp  ImageAnnotationYolo.h  ImageHandler.cpp  ImageHandler.h  MainWindow.cpp
ui/: DisplayWidget.ui
